# Labs

AISD/: .gitignore
AISD/1/: Makefile  huepph.h  main.c  matrix.c  tools.c
AISD/1/ADDI/: Makefile  main.c  matr.h  matrix.c  tools.c
AISD/2/: Makefile  interface.h  list.c  main.c  vector.c
AISD/3a/: Files.c  Makefile  del_tab.c  del_tab_i.c  dialo.c  dialo.h  dialo_i.c  main.c  matr_de.h  tools.c  tools.h  work_w_tab.c  work_w_tab_i.c
AISD/3b/: Files.c  Makefile  del_tab.c  dialo.c  dialo.h  main.c  matr_de.h  tools.c  tools.h  work_w_tab.c
AISD/4a/: Makefile  dialog.c  dialog.h  main.c  tools.c  tools.h  tree.c  tree.h
AISD/4b/: Makefile  add.c  calibrate.c  dialog.c  dialog.h  main.c  tools.c  tools.h  tree.c  tree.h
AISD/5/: Makefile  add.c  add.h  dialoc.c  dialoc.h  graph.c  graph.h  main.c  tools.c  tools.h
OOP/1/: .gitignore  CMakeLists.txt  Makefile  dialini.cpp  docini  main.cpp  struct.h  test.txt  testini.cpp  toolsini.cpp
OOP/2/: .gitignore  CMakeLists.txt  Makefile  Vector.cpp  Vector.hpp  Word.cpp  Word.hpp  Words.cpp  Words.hpp  iterator_v.hpp  main.cpp  tests.cpp  tests_2.cpp  tools.cpp  tools.hpp
OOP/2ex/: CMakeLists.txt  Doxyfile  instruct.txt
OOP/2ex/src/: AssemblyInstruction.cpp  AssemblyInstruction.h  Detail.cpp  Detail.h  DialogFunctions.cpp  DialogFunctions.h  main.cpp  pric.h  pricladnay.cpp
OOP/3/: CMakeLists.txt  Doxygen  main.cpp  test.json
OOP/3/Factories/: Factories.hpp
OOP/3/Vector/: Vector.hpp  iterator_v.hpp
OOP/3/game_algorithm/: game_algorithm.cpp  game_algorithm.hpp
OOP/3/grafic/: Gentity.hpp  gravic.cpp  gravic.hpp
OOP/3/inventory/: Inventory.hpp  inventory.cpp
OOP/3/inventory/Item/: Item.cpp  Items.hpp
OOP/3/level/: Level.cpp  Level.hpp
OOP/3/level/cell/: Cell.cpp  Cell.hpp
OOP/3/logic_Dire/: logicDire.cpp  logicDire.hpp  logicDire_multi_thread.cpp  logicDire_multi_thread.hpp  test.json
OOP/3/save/: levelpop.json
OOP/3/shared/: Entity.cpp  Entity.hpp  Forager.cpp  Oper.cpp  Personage.hpp  Smart.cpp  Wild.cpp  initfactory.hpp
OOP/3/tests/: test_entity.cpp  test_inventory.cpp  test_level.cpp
kaspr/: .gitignore  CMakeLists.txt  Makefile  net.hpp
kaspr/client/: client.hpp  main.cpp
kaspr/server/: main.cpp  server.hpp
kaspr/serverGraph/: main.cpp  serverGr.hpp
kaspr/test/: tests.cpp
